fedoracloudbrandingdir = $(datadir)/cockpit/branding/fedora-cloud

fedoracloudbranding_DATA = \
	branding/fedora-cloud/branding.css \
	branding/fedora-cloud/bg-login.jpg \
	branding/fedora-cloud/brand-large.png \
	branding/fedora-cloud/brand.png \
	branding/fedora-cloud/logo.png \
	branding/fedora-cloud/apple-touch-icon.png \
	branding/fedora-cloud/favicon.ico \
	$(NULL)
