fedoraserverbrandingdir = $(datadir)/cockpit/branding/fedora-server

fedoraserverbranding_DATA = \
	branding/fedora-server/branding.css \
	branding/fedora-server/bg-login.jpg \
	branding/fedora-server/brand-large.png \
	branding/fedora-server/brand.png \
	branding/fedora-server/logo.png \
	branding/fedora-server/apple-touch-icon.png \
	branding/fedora-server/favicon.ico \
	$(NULL)
