fedoraworkstationbrandingdir = $(datadir)/cockpit/branding/fedora-workstation

fedoraworkstationbranding_DATA = \
	branding/fedora-workstation/branding.css \
	branding/fedora-workstation/bg-login.jpg \
	branding/fedora-workstation/brand-large.png \
	branding/fedora-workstation/brand.png \
	branding/fedora-workstation/logo.png \
	branding/fedora-workstation/apple-touch-icon.png \
	branding/fedora-workstation/favicon.ico \
	$(NULL)
